# gk_2024_proj4

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-tidy.yaml  cppcheck.yaml  linux_tests.yaml
models/: CMakeLists.txt
resources/: CMakeLists.txt
scenes/: a.libgcp_scene  ak_issues.libgcp_scene  ak_only.libgcp_scene  city.libgcp_scene  cs_scene_1.libgcp_scene  floor.libgcp_scene  fog_test.libgcp_scene  light_test_1.libgcp_scene  test_scene_1.libgcp_scene  test_scene_2.libgcp_scene  testtest.libgcp_scene
scripts/: build_and_run_unit_tests.bash  generate_compile_db.bash  run_clang_tidy.bash  run_cppcheck.bash  setup_dev_env.bash
src/: .devntoes  CMakeLists.txt  lib_main.cpp  main.cpp  main_debug.cpp  main_editor.cpp  main_game.cpp
src/libcgp/: defines.hpp  intf.cpp  intf.hpp  main.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  rc.hpp  settings.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  todo.hpp  version.hpp
src/libcgp/engine/: engine.cpp  engine.hpp  g_buffer.cpp  g_buffer.hpp  global_light.cpp  global_light.hpp  light_mgr.cpp  light_mgr.hpp  lights.hpp  process_loop.cpp  process_loop.hpp  view.cpp  view.hpp  word_time.cpp  word_time.hpp
src/libcgp/mgr/: object_mgr.cpp  object_mgr.hpp  resource_mgr.cpp  resource_mgr.hpp  settings_mgr.cpp  settings_mgr.hpp
src/libcgp/primitives/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  quad.hpp  shader.cpp  shader.hpp  static_object.cpp  static_object.hpp  texture.cpp  texture.hpp
src/libcgp/serialization/: scene_serializer.cpp  scene_serializer.hpp
src/libcgp/utils/: checks.cpp  checks.hpp  files.cpp  files.hpp  macros.hpp  timer.hpp
src/libcgp/window/: mouse.cpp  mouse.hpp  window.cpp  window.hpp
src/libcgp/window/overlay/: app_overlay.cpp  app_overlay.hpp  debug_overlay.cpp  debug_overlay.hpp
src/shaders/: CMakeLists.txt  contours.frag  contours.vert  deferred_shading.frag  deferred_shading.vert  first_fragment_shader.frag  first_fragment_shader.glsl  first_vertex_shader.glsl  first_vertex_shader.vert  g_buffer.frag  g_buffer.vert
src/utils/: checks.cpp  macros.hpp
tests/: CMakeLists.txt  example.cpp  open_gl_test.hpp  shaders_tests.cpp  texture_test.cpp
